--- a/web/chat/scripts/resources/batch_report_template.html
+++ b/web/chat/scripts/resources/batch_report_template.html
@@ -52,7 +52,7 @@
         <td><span class="badge badge-pill badge-{{session.status_class}}">{{session.status_label}}</span></td>
       <!--<td>N/A</td>-->
       <td>{{ session.traj_count }}</td>
-      <td>0</td>
+      <td>{{ session.gold_path_len }}</td>
         <td>{{ session.oracle_rating }}</td>
       <td>{{ session.navigator_rating }}</td>
         <td><a target="_blank" href="https://preview.mp-dialog.ml/?house_scan={{session.house}}&start_pano={{session.start_pano}}&end_panos={{session.end_panos}}&inst=Go%20to%20the%20room%20with%20the%20{{session.target_obj}}.&mode=oracle&max_gold_len=-1"><span class="oi oi-external-link"></span> Oracle</a></td>
